[gd_scene load_steps=9 format=3 uid="uid://id3ekfa6qp5o"]

[ext_resource type="Script" uid="uid://fcpump45ktp" path="res://scripts/left_panel_anim.gd" id="1_q1nc5"]
[ext_resource type="Script" uid="uid://djhg48sqhbaea" path="res://scripts/right_panel_anim.gd" id="2_jvmy4"]

[sub_resource type="Animation" id="Animation_q1nc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 648)]
}

[sub_resource type="Animation" id="Animation_jvmy4"]
resource_name = "slide_in_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-288, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_e4cfk"]
resource_name = "slide_out_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-288, 0)]
}

[sub_resource type="Animation" id="Animation_67toa"]
resource_name = "slide_out_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1152, 648), Vector2(1440, 648)]
}

[sub_resource type="Animation" id="Animation_en2g2"]
resource_name = "slide_in_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1440, 648), Vector2(1152, 648)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvmy4"]
_data = {
&"RESET": SubResource("Animation_q1nc5"),
&"slide_in_left": SubResource("Animation_jvmy4"),
&"slide_in_right": SubResource("Animation_en2g2"),
&"slide_out_left": SubResource("Animation_e4cfk"),
&"slide_out_right": SubResource("Animation_67toa")
}

[node name="HUD2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="leftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 1.0
offset_left = 1152.0
offset_top = 648.0
offset_right = 1151.9995
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1nc5")

[node name="slideAnimation" type="AnimationPlayer" parent="leftPanel"]
libraries = {
&"": SubResource("AnimationLibrary_jvmy4")
}

[node name="disableTime" type="Timer" parent="leftPanel"]

[node name="Button" type="Button" parent="leftPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0070001
anchor_top = 0.469
anchor_right = 1.146
anchor_bottom = 0.531
offset_left = -0.016021729
offset_top = 0.08798218
offset_right = -32.048004
offset_bottom = -32.088013
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="rightPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75000006
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 287.99994
offset_top = 648.0
offset_right = 287.9995
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.1415927
script = ExtResource("2_jvmy4")

[node name="slideAnimation" type="AnimationPlayer" parent="rightPanel"]
libraries = {
&"": SubResource("AnimationLibrary_jvmy4")
}

[node name="disableTime" type="Timer" parent="rightPanel"]

[node name="Button" type="Button" parent="rightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0070001
anchor_top = 0.469
anchor_right = 1.146
anchor_bottom = 0.531
offset_left = -0.016021729
offset_top = 0.08798218
offset_right = -32.048004
offset_bottom = -32.088013
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[connection signal="timeout" from="leftPanel/disableTime" to="leftPanel" method="_on_disable_time_timeout"]
[connection signal="pressed" from="leftPanel/Button" to="leftPanel" method="_on_button_pressed"]
[connection signal="timeout" from="rightPanel/disableTime" to="rightPanel" method="_on_disable_time_timeout"]
[connection signal="pressed" from="rightPanel/Button" to="rightPanel" method="_on_button_pressed"]
